# recsys-neural-evolution

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/source/: conf.py  index.rst
prototyping/: prototype_mf.ipynb
src/utils/data_ingestion/: ingest_ecommerce_retailrocket_kaggle.py
