[project]
name = "recsys"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "polars (>=1.20.0,<2.0.0)",
    "kagglehub[polars-datasets] (>=0.3.12,<0.4.0)",
    "pyarrow (>=18.1.0,<19.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "seaborn (>=0.13.0,<1.0.0)",
    "scikit-learn (>=1.4.0,<2.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.7"
isort = "^6.0.1"
sphinx = "^8.2.3"
